# kafka-confluent-get-started

./: .gitignore  LICENSE  README.md  pyproject.toml
kafka_confluent_get_started/: consumer.py  getting_started.ini  producer.py
