[tool.poetry]
name = "kafka-confluent-get-started"
version = "0.1.0"
description = ""
authors = ["alex carvalho <alex.carvaho.data@gmail.com>"]
readme = "README.md"
packages = [{include = "kafka_confluent_get_started"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
